<resources>
    <string name="app_name">Usual calculator</string>
    <string name="app_name2">Engineer calculator</string>
    <string name="share">/</string>
    <string name="multiplication">*</string>
    <string name="startTextScreen">0.0</string>
    <string name="sevenBtn">7</string>
    <string name="eightBtn">8</string>
    <string name="nineBtn">9</string>
    <string name="fourBtn">4</string>
    <string name="fiveBtn">5</string>
    <string name="sixBtn">6</string>
    <string name="oneBtn">1</string>
    <string name="twoBtn">2</string>
    <string name="threeBtn">3</string>
    <string name="zeroBtn">0</string>
    <string name="pointBtn">.</string>
    <string name="subtraction">-</string>
    <string name="clearBtn">C</string>
    <string name="signChange">+/-</string>
    <string name="percent">%</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="change_mode">change mode to engineer calculator</string>
    <string name="change_mode_to_calculator">change mode to calculator</string>
    <string name="mc">MC</string>
    <string name="M_plus">M+</string>
    <string name="M_minus">M-</string>
    <string name="mr">MR</string>
    <string name="sqrt">Sqrt</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="but">But</string>
</resources>