<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/screenLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="right"
            android:text="@string/startTextScreen"
            android:background="@color/colorTextBackground"
            android:textColor="@color/colorTextScreen"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/MCBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/mc"
                android:background="@color/colorBtnScreenNumbers"
                android:textSize="30sp" />
            <Button
                android:id="@+id/MplusBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/M_plus"
                android:background="@color/colorBtnScreenNumbers"
                android:textSize="30sp" />
            <Button
                android:id="@+id/MminusBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/M_minus"
                android:background="@color/colorBtnScreenNumbers"
                android:textSize="30sp" />
            <Button
                android:id="@+id/MRBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/mr"
                android:background="@color/colorBtnScreenNumbers"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/screenLayout">

        <RelativeLayout
            android:id="@+id/numberLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"

            app:layout_constraintEnd_toStartOf="@+id/countLayout"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/layout0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/clearBtn"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/signChangeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/signChange"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shareBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreen"
                    android:text="@string/share"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout0"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sevenBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/sevenBtn"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/eightBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/eightBtn"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/nineBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/nineBtn"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fourBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/fourBtn"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/fiveBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/fiveBtn"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/sixBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/sixBtn"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/oneBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/oneBtn"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/twoBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/twoBtn"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/threeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/threeBtn"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/zeroBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/zeroBtn"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/pointBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorBtnScreenNumbers"
                    android:text="@string/pointBtn"
                    android:textSize="30sp" />


            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/countLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/numberLayout"
            app:layout_constraintTop_toTopOf="@+id/numberLayout"
            app:layout_constraintBottom_toBottomOf="@+id/numberLayout">

            <Button
                android:id="@+id/multiplicationBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorBtnScreen"
                android:text="@string/multiplication"
                android:textSize="30sp" />

            <Button
                android:id="@+id/subtractionBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@color/colorBtnScreen"
                android:text="@string/subtraction"
                android:textSize="30sp"
                tools:ignore="UnknownId" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@color/colorBtnScreen"
                android:text="@string/plus"
                android:textSize="30sp" />

            <Button
                android:id="@+id/equallyBtn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="7dp"
                android:layout_weight="2"
                android:background="@color/colorBtnScreen"
                android:text="@string/equals"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>